--- a/.github/workflows/JavaChecks.yml
+++ b/.github/workflows/JavaChecks.yml
@@ -13,5 +13,7 @@ jobs:
         with:
           java-version: '11'
           distribution: 'temurin'
+      - name: mvn clean verify
+        run: mvn clean verify
       - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots package
+        run: mvn --batch-mode --update-snapshots clean package
