--- a/src/test/resources-its/it/IntegrationTestsIT/singleDependency/pom.xml
+++ b/src/test/resources-its/it/IntegrationTestsIT/singleDependency/pom.xml
@@ -23,7 +23,7 @@
       <plugin>
         <groupId>io.github.chains-project</groupId>
         <artifactId>
-          hash-pin</artifactId>
+          maven-integrity-plugin</artifactId>
         <version>@project.version@</version>
         <executions>
           <execution>
