--- a/src/test/resources-its/it/IntegrationTestsIT/simpleProject/pom.xml
+++ b/src/test/resources-its/it/IntegrationTestsIT/simpleProject/pom.xml
@@ -16,7 +16,7 @@
     <plugins>
       <plugin>
         <groupId>io.github.chains-project</groupId>
-        <artifactId>maven-integrity-plugin</artifactId>
+        <artifactId>integrity-maven-plugin</artifactId>
         <version>@project.version@</version>
         <executions>
           <execution>
