--- a/src/test/resources-its/it/IntegrationTestsIT/singleDependencyCheckCorrect/pom.xml
+++ b/src/test/resources-its/it/IntegrationTestsIT/singleDependencyCheckCorrect/pom.xml
@@ -28,8 +28,7 @@
         <executions>
           <execution>
             <goals>
-              <goal>
-                generate</goal>
+              <goal>validate</goal>
             </goals>
           </execution>
         </executions>
