--- a/src/test/resources-its/it/IntegrationTestsIT/singleDependencyCheckMustFail/pom.xml
+++ b/src/test/resources-its/it/IntegrationTestsIT/singleDependencyCheckMustFail/pom.xml
@@ -29,7 +29,7 @@
           <execution>
             <goals>
               <goal>
-                generate</goal>
+                validate</goal>
             </goals>
           </execution>
         </executions>
