--- a/src/test/resources-its/it/IntegrationTestsIT/singleDependency/pom.xml
+++ b/src/test/resources-its/it/IntegrationTestsIT/singleDependency/pom.xml
@@ -12,10 +12,9 @@
   </properties>
   <dependencies>
     <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
-      <version>5.9.2</version>
-      <scope>test</scope>
+      <groupId>fr.inria.gforge.spoon</groupId>
+      <artifactId>spoon-core</artifactId>
+      <version>10.3.0</version>
     </dependency>
   </dependencies>
   <build>
