--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,11 @@
       <version>1.0.4</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>31.1-jre</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
