--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -17,6 +17,8 @@ jobs:
             $-jbang-
     - name: Setup Maven Action
       uses: s4u/setup-maven-action@v1.2.1
+      with:
+        java-version: 17
     - name: jbang
       uses: jbangdev/jbang-action@v0.105.1
       with:
