--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -15,10 +15,8 @@ jobs:
         key: $-jbang-$
         restore-keys: |
             $-jbang-
-    - name: Setup Maven Action
-      uses: s4u/setup-maven-action@v1.2.1
-      with:
-        java-version: 17
+    - name: Set up Maven
+      uses: apt install maven
     - name: jbang
       uses: jbangdev/jbang-action@v0.105.1
       with:
