--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -16,7 +16,7 @@ jobs:
         restore-keys: |
             $-jbang-
     - name: Set up Maven
-      run: apt install maven
+      run: sudo apt install maven
     - name: jbang
       uses: jbangdev/jbang-action@v0.105.1
       with:
