--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -9,19 +9,7 @@ jobs:
     steps:
     - name: checkout
       uses: actions/checkout@v1
-    - uses: actions/cache@v1
-      with:
-        path: /root/.jbang
-        key: $-jbang-$
-        restore-keys: |
-            $-jbang-
-    - name: Set up Maven
-      run: sudo apt install maven
-    - name: jbang
-      uses: jbangdev/jbang-action@v0.105.1
-      with:
-        script: ".github/smoketest/SmokeTest.java"
-        scriptargs: "my world"
-      env:
-        JBANG_REPO: /root/.jbang/repository
-        GITHUB_TOKEN: $
+    - name: run dockerfile 
+      run: |
+        docker build -t jbang ./.github/smoketest/.
+        docker run -it --rm jbang jbang 
