--- a/.github/workflows/jreleaser.yml
+++ b/.github/workflows/jreleaser.yml
@@ -16,19 +16,17 @@ jobs:
 
       # Configure build steps as you'd normally do
 
-      - name: Setup Java
+      - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
-          java-version: 11
-          distribution: 'zulu'
-          server-id: central
-          server-username: MAVEN_USERNAME
-          server-password: MAVEN_CENTRAL_TOKEN
-          gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
-          gpg-passphrase: MAVEN_GPG_PASSPHRASE
+          java-version: '11'
+          distribution: 'temurin'
 
       # Post JARs to Maven Central
-
+      - name: git settings
+        run: |
+          git config user.name "${{ github.event.head_commit.committer.name }}"
+          git config user.email "${{ github.event.head_commit.committer.email }}"
       - name: Release to Maven Central
         env:
           MAVEN_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
@@ -36,8 +34,7 @@ jobs:
           MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
         run: |
           export GPG_TTY=$(tty)
-          git config user.name "${{ github.event.head_commit.committer.name }}"
-          git config user.email "${{ github.event.head_commit.committer.email }}"
+
           mvn -B --file pom.xml release:prepare release:perform
 
       # Create a release
