--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,17 @@
       <artifactId>guava</artifactId>
       <version>31.1-jre</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.maven.shared</groupId>
+      <artifactId>maven-dependency-tree</artifactId>
+      <version>3.2.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven.shared</groupId>
+      <artifactId>maven-artifact-transfer</artifactId>
+      <version>0.13.1</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
