--- a/jreleaser.yml
+++ b/jreleaser.yml
@@ -2,11 +2,10 @@
 project:
   name: integrity-maven-plugin
   description: A plugin to lock and validate the integrity of the dependencies of a maven based project.
-  longDescription: This plugin is a proof of concept for a maven plugin that can be used to validate
-        the integrity of a maven repository. It does this by generating a lock file that contains
-        the checksums of all the artifacts in the repository. The lock file can then be used to
-        validate the integrity of the repository. This guards the supply chain against malicious
-        actors that might tamper with the artifacts in the repository.
+  longDescription: This plugin is a state-of-the-art solution that can be used to validate the integrity of a maven repository. 
+                  It does this by generating a lock file that contains the checksums of all the artifacts in the repository.
+                  The lock file can then be used to validate the integrity of the repository.
+                  This guards the supply chain against malicious actors that might tamper with the artifacts in the repository.
   authors:
     - MartinWitt
   license: MIT
