fix docker build

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build the Docker image
-        run: docker build -f src/main/docker/Dockerfile.jvm -t chains/lockfile_action ./github_action
+        run: cd github_action && docker build -f src/main/docker/Dockerfile.jvm -t chains/lockfile_action .
       - name: Log into registry
         run: echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
       - name: Push image
