--- a/github_action/src/main/docker/Dockerfile.jvm
+++ b/github_action/src/main/docker/Dockerfile.jvm
@@ -77,7 +77,7 @@
 ###
 FROM registry.access.redhat.com/ubi8/openjdk-11:1.14
 
-RUN microdnf install maven
+RUN microdnf upate && microdnf install maven
 
 ENV LANGUAGE='en_US:en'
 
