--- a/github_action/src/main/docker/Dockerfile.jvm
+++ b/github_action/src/main/docker/Dockerfile.jvm
@@ -7,7 +7,7 @@ RUN apt-get update && apt-get install --yes --no-install-recommends openjdk-17-j
 RUN chown 1001 / \
   && chmod "g+rwX" / \
   && chown 1001:root /
-COPY --chown=1001:root build/*-runner /application
+COPY --chown=1001:root target/*-runner /application
 EXPOSE 8080
 USER 1001
 
